objects/SpringCMEos__DSWConfig__c.object
<CustomObject>
    <fields>
        <fullName>SpringCMEos__All_Words__c</fullName>
        <label>All Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Any_Attribute_Field__c</fullName>
        <label>Any Attribute Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Any_Words__c</fullName>
        <label>Any Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__DSWName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SpringCMEos__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__EOS_Object_Id__c</fullName>
        <label>EOS Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__EOS_Object_Type__c</fullName>
        <label>EOS Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__In_Folder__c</fullName>
        <label>In Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Include_Sub_Folders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Sub Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__JSON_Configuration__c</fullName>
        <label>JSON_Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__JSON_Format__c</fullName>
        <label>JSON Format</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Phrase__c</fullName>
        <label>Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Types__c</fullName>
        <label>Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__UpdatedBy__c</fullName>
        <label>UpdatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__UpdatedOnOrAfter__c</fullName>
        <label>UpdatedOnOrAfter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Updated_On_Or_Before__c</fullName>
        <label>Updated On Or Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Variables__c</fullName>
        <label>Variables</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Without_Words__c</fullName>
        <label>Without Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Get It! Configuration</label>
    <listViews>
        <fullName>SpringCMEos__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Get It! Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Get It!</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>